Prevent content element from overlapping "insert before" button
In some cases the number of the content element blocked access to the
insert button. This change also increases click area for inline
images.

REDMINE-20171

--- a/entry_types/scrolled/package/src/frontend/inlineEditing/SelectionRect.module.css
+++ b/entry_types/scrolled/package/src/frontend/inlineEditing/SelectionRect.module.css
@@ -40,7 +40,7 @@
   position: absolute;
   top: -40px;
   right: -15px;
-  z-index: 1;
+  z-index: 2;
   pointer-events: auto;
 }
 
@@ -51,6 +51,7 @@
   width: 100%;
   opacity: 0.8;
   pointer-events: none;
+  z-index: 1;
 }
 
 .insertHovered.insert {
